# uMDNS

./: .gitignore  .gitmodules  .markdownlint.json  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  LICENSE  LICENSE.md  README.md  mkdocs.yml
docs/: README.md  Supported resource record types.md  conf.py  index.md
include/umdns/: records.h  umdns.h  umdns_external.h
include/umdns/detail/: umdns_logging.h  umdns_network.h  umdns_records.h  umdns_result.h  umdns_scheduler.h  umdns_state.h
src/: CMakeLists.txt  mdns_prober.c  mdns_prober.h  umdns.c  umdns_responder.c  umdns_responder.h  umdns_state.c  umdns_state.h
tests/unit/: CMakeLists.txt  main.c  test_umdns_initialization.c  test_umdns_probing.c  umdns_fake_network.c  umdns_fake_network.h  umdns_fake_scheduler.c  umdns_fake_scheduler.h
